--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -28,7 +28,7 @@ progressive_web_app/enabled=false
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=0
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color( 0, 0, 0, 1 )
+progressive_web_app/icon_144x144="res://textures/sicklecellicon.png"
+progressive_web_app/icon_180x180="res://textures/sicklecellicon.png"
+progressive_web_app/icon_512x512="res://textures/sicklecellicon.png"
+progressive_web_app/background_color=Color( 1, 1, 1, 1 )
